--- a/index.html
+++ b/index.html
@@ -6,37 +6,41 @@
 <title>Employee Hours App</title>
 <style>
 body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; }
-header { background:#262e87; color:white; padding:10px; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; }
+header { background:#262e87; color:white; padding:10px; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; position:sticky; top:0; z-index:1001; }
 #hamburgerBtn { font-size:24px; cursor:pointer; margin-right:10px; }
-#sidebar { width:250px; background:#3a2b7c; color:white; position:fixed; top:0; left:-250px; height:100%; overflow:auto; transition:0.3s; padding:10px; z-index:1000; }
+#sidebar { width:250px; background:#3a2b7c; color:white; position:fixed; top:0; left:-260px; height:100%; overflow:auto; transition:0.3s; padding:10px; z-index:1002; }
 #sidebar.open { left:0; }
+#overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); display:none; z-index:1001; }
 button { cursor:pointer; margin:2px; padding:4px 8px; border:none; border-radius:4px; background:#f04e23; color:white; }
 table { width:100%; border-collapse:collapse; margin-top:10px; }
-th, td { border:1px solid #333; padding:6px; text-align:center; }
+th, td { border:1px solid #333; padding:6px; text-align:center; font-size:0.9em; }
 th { background:#f7931e; color:white; }
 input[type=time], input[type=text], input[type=date] { width:90%; padding:4px; }
-.bulk-section { margin:5px 0; padding:5px; background:#eee; border-radius:5px; }
-#savedDatesList li { list-style:none; background:#f04e23; color:white; padding:4px; margin:2px 0; border-radius:3px; cursor:pointer; }
+#savedDatesList li { list-style:none; background:#f04e23; color:white; padding:4px; margin:2px 0; border-radius:3px; cursor:pointer; font-size:0.9em; }
 #savedDatesList li:hover { background:#f7931e; }
 #shareLink { margin-top:10px; display:block; color:white; background:#f7931e; padding:6px; text-align:center; border-radius:5px; text-decoration:none; }
+@media(max-width:600px){
+  table, th, td, input { font-size:0.8em; }
+  header { flex-direction: column; align-items:flex-start; }
+  #sidebar { width:200px; }
+}
 </style>
 </head>
 <body>
 
 <header>
   <span id="hamburgerBtn">☰ Teams</span>
-  <div>
+  <div style="display:flex; flex-wrap:wrap; gap:5px; margin-top:5px;">
     <input type="date" id="workDate">
     <button id="saveBtn">Save Data</button>
-    <a id="shareLink" href="view.html" target="_blank">View Shareable Link</a>
+    <button id="exportCSVBtn">Export CSV</button>
+    <a id="shareLink" href="#" target="_blank">View Shareable Link</a>
+    <input type="date" id="exportFrom" title="From Date">
+    <input type="date" id="exportTo" title="To Date">
   </div>
 </header>
 
-<div style="margin:10px;">
-  <label>From: <input type="date" id="exportFrom"></label>
-  <label>To: <input type="date" id="exportTo"></label>
-  <button onclick="exportCSV()">Export CSV</button>
-</div>
+<div id="overlay"></div>
 
 <div id="sidebar">
   <h3>Teams & Employees</h3>
@@ -61,11 +65,8 @@ let teams = JSON.parse(localStorage.getItem("teams")) || [
 ];
 let allData = JSON.parse(localStorage.getItem("allData")) || {};
 let selectedDate = new Date().toISOString().split("T")[0];
-
-// UAE Public Holidays 2025
 const publicHolidays = ["2025-01-01","2025-03-30","2025-03-31","2025-04-01","2025-04-02","2025-06-05","2025-06-06","2025-06-07","2025-06-08","2025-06-27","2025-09-05","2025-12-02","2025-12-03","2025-12-30","2025-12-31"];
 
-// Local Storage Helpers
 function saveTeams(){ localStorage.setItem("teams", JSON.stringify(teams)); }
 function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData)); }
 
@@ -74,49 +75,47 @@ function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData))
 // ==========================
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
-dateInput.addEventListener("change", () => { selectedDate = dateInput.value; buildEmployeeTable(); });
+dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(); updateShareLink(); });
 
 // ==========================
-// Hamburger Toggle
+// Hamburger Sidebar
 // ==========================
 const sidebar = document.getElementById("sidebar");
+const overlay = document.getElementById("overlay");
 const hamburgerBtn = document.getElementById("hamburgerBtn");
-hamburgerBtn.addEventListener("click", e => { e.stopPropagation(); sidebar.classList.toggle("open"); });
-document.addEventListener("click", e => { if(!sidebar.contains(e.target) && !hamburgerBtn.contains(e.target)) sidebar.classList.remove("open"); });
+function openSidebar(){ sidebar.classList.add("open"); overlay.style.display="block"; }
+function closeSidebar(){ sidebar.classList.remove("open"); overlay.style.display="none"; }
+hamburgerBtn.addEventListener("click", e=>{ e.stopPropagation(); openSidebar(); });
+overlay.addEventListener("click", closeSidebar);
 
 // ==========================
 // Build Hamburger Menu
 // ==========================
 function buildHamburgerMenu(){
-  const menu = document.getElementById("employeeMenu");
-  menu.innerHTML = "";
+  const menu=document.getElementById("employeeMenu"); menu.innerHTML="";
   teams.forEach(team=>{
-    const teamDiv = document.createElement("div");
-    teamDiv.className = "team-block";
-    const title = document.createElement("h4"); title.textContent = team.name; teamDiv.appendChild(title);
+    const teamDiv=document.createElement("div");
+    const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
-    const ul = document.createElement("ul"); ul.dataset.team=team.name;
+    const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
-      const li = document.createElement("li");
-      li.textContent = emp.name+" ("+emp.site+")";
-      ul.appendChild(li);
+      const li=document.createElement("li"); li.textContent=emp.name+" ("+emp.site+")"; ul.appendChild(li);
     });
-    const addBtn = document.createElement("button");
-    addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
+    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
     teamDiv.appendChild(ul); teamDiv.appendChild(addBtn);
     menu.appendChild(teamDiv);
   });
 }
 
 // ==========================
-// Add Employees
+// Add Employee
 // ==========================
 function addEmployee(teamName){
   const name=prompt("Enter employee name:"); if(!name) return;
   const site=prompt("Enter site name:")||"";
   const employee={id:Date.now(),name,site,team:teamName};
   const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
-  saveTeams(); buildHamburgerMenu(); buildEmployeeTable();
+  saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
 }
 
 // ==========================
@@ -129,6 +128,7 @@ function buildEmployeeTable(){
   </tr>`;
   if(!allData[selectedDate]) allData[selectedDate]={};
   teams.forEach(team=>team.employees.forEach(emp=>addRow(emp)));
+  updateShareLink();
 }
 
 function addRow(emp){
@@ -136,6 +136,7 @@ function addRow(emp){
   const row=table.insertRow();
   row.insertCell(0).textContent=emp.name;
   row.insertCell(1).textContent=selectedDate;
+
   const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site; row.insertCell(2).appendChild(siteInput);
   const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||""; row.insertCell(3).appendChild(inInput);
   const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||""; row.insertCell(4).appendChild(outInput);
@@ -149,9 +150,12 @@ function addRow(emp){
     allData[selectedDate][emp.id].site=siteInput.value;
     saveAllData();
     updateSavedDatesList();
+    updateShareLink();
   }
   inInput.addEventListener("change", updateAndSave);
   outInput.addEventListener("change", updateAndSave);
+  siteInput.addEventListener("change", updateAndSave);
+
   calculateHours(inInput,outInput,totalCell,overtimeCell);
 
   const d=new Date(selectedDate);
@@ -167,7 +171,7 @@ function calculateHours(inInput,outInput,totalCell,overtimeCell){
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
   totalCell.textContent=diff.toFixed(2);
   const d=new Date(selectedDate);
-  overtimeCell.textContent = (d.getDay()===0||publicHolidays.includes(selectedDate)) ? diff.toFixed(2) : (diff>9?(diff-9).toFixed(2):"0");
+  overtimeCell.textContent=(d.getDay()===0||publicHolidays.includes(selectedDate))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
 }
 
 // ==========================
@@ -179,16 +183,43 @@ function updateSavedDatesList(){
   Object.keys(allData).sort((a,b)=>new Date(b)-new Date(a)).forEach(date=>{
     const li=document.createElement("li");
     li.textContent=date;
-    li.onclick=()=>{ selectedDate=date; dateInput.value=date; buildEmployeeTable(); };
+    li.onclick=()=>{ selectedDate=date; dateInput.value=date; buildEmployeeTable(); closeSidebar(); };
     savedDatesList.appendChild(li);
   });
 }
 
 // ==========================
-// Push Summary to Google Sheet
+// Export CSV
+// ==========================
+document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
+  const fromDate=document.getElementById("exportFrom").value||selectedDate;
+  const toDate=document.getElementById("exportTo").value||selectedDate;
+  let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
+  const allDates=Object.keys(allData).sort();
+  const datesToExport=allDates.filter(d=>d>=fromDate && d<=toDate);
+  datesToExport.forEach(date=>{
+    teams.forEach(team=>{
+      team.employees.forEach(emp=>{
+        const empData=allData[date]?.[emp.id]; if(!empData) return;
+        let total="", overtime="";
+        if(empData.in && empData.out){
+          const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+          let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+          total=diff.toFixed(2); const d=new Date(date);
+          overtime=(d.getDay()===0||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+        }
+        rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
+      });
+    });
+  });
+  const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
+  const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
+});
+
+// ==========================
+// Google Sheet Summary Push
 // ==========================
 async function pushSummaryToGoogleSheet(){
-  const date = selectedDate;
   let site="", teamCount=0;
   teams.forEach(team=>{
     if(team.employees.length>0){
@@ -196,65 +227,38 @@ async function pushSummaryToGoogleSheet(){
       team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; });
     }
   });
-
-  const payload={date, site: site||"N/A", team: teamCount};
-
+  const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
+  const webAppURL="https://script.google.com/macros/s/AKfycbz3cCt4x9T1ugWtaUZBcm3toy7sUCdndJCcqeCH5lPgVZvLp9dVNVvVmNGTmdqbmw7USg/exec"; // Replace with your Web App URL
   try{
-    const response = await fetch("https://script.google.com/macros/s/AKfycbz3cCt4x9T1ugWtaUZBcm3toy7sUCdndJCcqeCH5lPgVZvLp9dVNVvVmNGTmdqbmw7USg/exec", {
-      method:"POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify(payload)
-    });
-    const result = await response.json();
-    if(result.status==="success") alert("✅ Data saved & summary uploaded!");
-    else { console.error(result); alert("⚠️ Failed to upload summary"); }
-  }catch(err){ console.error(err); alert("⚠️ Network error: Could not connect to Google Sheet"); }
+    const res=await fetch(webAppURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
+    const result=await res.json();
+    if(result.status==="success") alert("✅ Summary uploaded to Google Sheet");
+    else alert("⚠️ Failed to upload summary");
+  } catch(err){ alert("⚠️ Network error: "+err.message); }
+}
+
+// ==========================
+// Shareable Link
+// ==========================
+const shareLink=document.getElementById("shareLink");
+function updateShareLink(){
+  const params=new URLSearchParams();
+  params.set("date", selectedDate);
+  shareLink.href=window.location.origin+window.location.pathname+"?"+params.toString();
+  shareLink.textContent="View Shareable Link";
 }
 
 // ==========================
 // Save Button
 // ==========================
-document.getElementById("saveBtn").addEventListener("click", async ()=>{
-  saveAllData();
-  updateSavedDatesList();
-  await pushSummaryToGoogleSheet();
+document.getElementById("saveBtn").addEventListener("click", ()=>{
+  saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!");
 });
-
-// ==========================
-// Export CSV
-// ==========================
-function exportCSV(){
-  const fromDate = document.getElementById("exportFrom").value || selectedDate;
-  const toDate = document.getElementById("exportTo").value || selectedDate;
-
-  let rows = [["Date","Site Name","No of Team Members"]];
-
-  Object.keys(allData).sort().forEach(date => {
-    if(date >= fromDate && date <= toDate){
-      let site="", teamCount=0;
-      teams.forEach(team=>{
-        if(team.employees.length>0){
-          teamCount+=team.employees.length;
-          team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; });
-        }
-      });
-      rows.push([date, site||"N/A", teamCount]);
-    }
-  });
-
-  const blob = new Blob([rows.map(r=>r.join(",")).join("\n")], {type:"text/csv"});
-  const a=document.createElement("a");
-  a.href=URL.createObjectURL(blob);
-  a.download="employee_summary.csv";
-  a.click();
-}
 
 // ==========================
 // Initialize
 // ==========================
-buildHamburgerMenu();
-buildEmployeeTable();
-updateSavedDatesList();
+buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList(); updateShareLink();
 </script>
 
 </body>
