--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ input[type=time], input[type=text], input[type=date] { width:90%; padding:4px; }
   header { flex-direction: column; align-items:flex-start; }
   #sidebar { width:200px; }
 }
+li.drag-over { border: 2px dashed #f04e23; }
 </style>
 </head>
 <body>
@@ -83,6 +84,11 @@ const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(); updateShareLink(); });
 
+// Prefill from shareable link
+const urlParams = new URLSearchParams(window.location.search);
+const dateParam = urlParams.get("date");
+if(dateParam){ selectedDate = dateParam; dateInput.value = selectedDate; }
+
 // ==========================
 // Hamburger Sidebar
 // ==========================
@@ -106,11 +112,11 @@ function buildHamburgerMenu(){
     // Site In / Out Inputs
     const siteIn=document.createElement("input");
     siteIn.type="time"; siteIn.value=team.siteIn||"";
-    siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); };
+    siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); buildEmployeeTable(); };
 
     const siteOut=document.createElement("input");
     siteOut.type="time"; siteOut.value=team.siteOut||"";
-    siteOut.onchange=()=>{ team.siteOut=siteOut.value; saveTeams(); };
+    siteOut.onchange=()=>{ team.siteOut=siteOut.value; saveTeams(); buildEmployeeTable(); };
 
     const timeWrap=document.createElement("div");
     timeWrap.innerHTML="<small>Default Site In/Out:</small><br>";
@@ -121,11 +127,37 @@ function buildHamburgerMenu(){
     // Employee List
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
-      const li=document.createElement("li"); li.textContent=emp.name+" ("+emp.site+")"; ul.appendChild(li);
+      const li=document.createElement("li"); li.textContent=emp.name+" ("+emp.site+")";
+      li.draggable = true;
+      li.dataset.empId = emp.id;
+
+      // Drag events
+      li.addEventListener("dragstart", e=>{ e.dataTransfer.setData("text/plain", emp.id); });
+      li.addEventListener("dragend", e=>{ document.querySelectorAll("li").forEach(el=>el.classList.remove("drag-over")); });
+
+      li.addEventListener("dragover", e=>{ e.preventDefault(); li.classList.add("drag-over"); });
+      li.addEventListener("dragleave", e=>{ li.classList.remove("drag-over"); });
+      li.addEventListener("drop", e=>{
+        e.preventDefault();
+        li.classList.remove("drag-over");
+        const draggedEmpId = e.dataTransfer.getData("text/plain");
+        if(draggedEmpId==emp.id) return;
+        swapEmployees(draggedEmpId, emp.id);
+      });
+
+      ul.appendChild(li);
     });
     const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
     teamDiv.appendChild(ul); teamDiv.appendChild(addBtn);
     menu.appendChild(teamDiv);
+
+    // Allow dropping at end of list
+    ul.addEventListener("dragover", e=>e.preventDefault());
+    ul.addEventListener("drop", e=>{
+      e.preventDefault();
+      const draggedEmpId = e.dataTransfer.getData("text/plain");
+      moveEmployeeToTeam(draggedEmpId, team.name);
+    });
   });
 }
 
@@ -138,6 +170,36 @@ function addEmployee(teamName){
   const employee={id:Date.now(),name,site,team:teamName};
   const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
   saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+}
+
+// ==========================
+// Swap / Move Employees
+// ==========================
+function swapEmployees(id1, id2){
+  let emp1, emp2;
+  teams.forEach(team=>{
+    team.employees.forEach(emp=>{
+      if(emp.id==id1) emp1=emp;
+      if(emp.id==id2) emp2=emp;
+    });
+  });
+  if(emp1 && emp2){
+    const t1=emp1.team; emp1.team=emp2.team; emp2.team=t1;
+    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+  }
+}
+function moveEmployeeToTeam(empId, newTeamName){
+  let emp;
+  teams.forEach(team=>{
+    team.employees.forEach(e=>{ if(e.id==empId) emp=e; });
+  });
+  if(emp && emp.team!==newTeamName){
+    const oldTeam=teams.find(t=>t.name===emp.team);
+    oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
+    const newTeam=teams.find(t=>t.name===newTeamName);
+    emp.team=newTeamName; newTeam.employees.push(emp);
+    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+  }
 }
 
 // ==========================
@@ -185,7 +247,7 @@ function addRow(emp){
 
   calculateHours(inInput,outInput,totalCell,overtimeCell);
   const d=new Date(selectedDate);
-  if(d.getDay()===0||publicHolidays.includes(selectedDate)) row.style.backgroundColor="yellow";
+  if([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate)) row.style.backgroundColor="yellow";
 }
 
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
@@ -197,7 +259,7 @@ function calculateHours(inInput,outInput,totalCell,overtimeCell){
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
   totalCell.textContent=diff.toFixed(2);
   const d=new Date(selectedDate);
-  overtimeCell.textContent=(d.getDay()===0||publicHolidays.includes(selectedDate))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+  overtimeCell.textContent=([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
 }
 
 // ==========================
@@ -232,7 +294,7 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
           const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
           let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
           total=diff.toFixed(2); const d=new Date(date);
-          overtime=(d.getDay()===0||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+          overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
         }
         rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
       });
