--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@ const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(); updateShareLink(); });
 
-// Prefill from shareable link
 const urlParams = new URLSearchParams(window.location.search);
 const dateParam = urlParams.get("date");
 if(dateParam){ selectedDate = dateParam; dateInput.value = selectedDate; }
@@ -101,6 +100,52 @@ hamburgerBtn.addEventListener("click", e=>{ e.stopPropagation(); openSidebar(); 
 overlay.addEventListener("click", closeSidebar);
 
 // ==========================
+// Drag & Drop - Only Move
+// ==========================
+function moveEmployeeToTeam(empId, newTeamName){
+  let emp, oldTeam;
+  teams.forEach(team=>{
+    team.employees.forEach(e=>{
+      if(e.id == empId){
+        emp = e;
+        oldTeam = team;
+      }
+    });
+  });
+  if(emp && emp.team !== newTeamName){
+    oldTeam.employees = oldTeam.employees.filter(e => e.id !== empId);
+    const newTeam = teams.find(t => t.name === newTeamName);
+    emp.team = newTeamName;
+    newTeam.employees.push(emp);
+    saveTeams();
+    buildHamburgerMenu();
+    buildEmployeeTable();
+    updateShareLink();
+  }
+}
+
+// ==========================
+// Long-Press Delete
+// ==========================
+function attachLongPressDelete(li, empId, teamName){
+  let pressTimer;
+  li.addEventListener("mousedown", () => {
+    pressTimer = setTimeout(() => {
+      if(confirm("Delete this employee?")){
+        const team = teams.find(t=>t.name === teamName);
+        team.employees = team.employees.filter(e=>e.id !== empId);
+        saveTeams();
+        buildHamburgerMenu();
+        buildEmployeeTable();
+        updateShareLink();
+      }
+    }, 800); // 800ms hold
+  });
+  li.addEventListener("mouseup", ()=>clearTimeout(pressTimer));
+  li.addEventListener("mouseleave", ()=>clearTimeout(pressTimer));
+}
+
+// ==========================
 // Build Hamburger Menu
 // ==========================
 function buildHamburgerMenu(){
@@ -109,7 +154,6 @@ function buildHamburgerMenu(){
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
-    // Site In / Out Inputs
     const siteIn=document.createElement("input");
     siteIn.type="time"; siteIn.value=team.siteIn||"";
     siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); buildEmployeeTable(); };
@@ -124,34 +168,37 @@ function buildHamburgerMenu(){
     timeWrap.appendChild(siteOut);
     teamDiv.appendChild(timeWrap);
 
-    // Employee List
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
-      const li=document.createElement("li"); li.textContent=emp.name+" ("+emp.site+")";
+      const li=document.createElement("li");
+      li.textContent = emp.name+" ("+emp.site+")";
       li.draggable = true;
       li.dataset.empId = emp.id;
 
-      // Drag events
       li.addEventListener("dragstart", e=>{ e.dataTransfer.setData("text/plain", emp.id); });
-      li.addEventListener("dragend", e=>{ document.querySelectorAll("li").forEach(el=>el.classList.remove("drag-over")); });
-
+      li.addEventListener("dragend", ()=>{ document.querySelectorAll("li").forEach(el=>el.classList.remove("drag-over")); });
       li.addEventListener("dragover", e=>{ e.preventDefault(); li.classList.add("drag-over"); });
-      li.addEventListener("dragleave", e=>{ li.classList.remove("drag-over"); });
+      li.addEventListener("dragleave", ()=>{ li.classList.remove("drag-over"); });
       li.addEventListener("drop", e=>{
         e.preventDefault();
         li.classList.remove("drag-over");
         const draggedEmpId = e.dataTransfer.getData("text/plain");
-        if(draggedEmpId==emp.id) return;
-        swapEmployees(draggedEmpId, emp.id);
+        moveEmployeeToTeam(draggedEmpId, team.name);
       });
+
+      attachLongPressDelete(li, emp.id, team.name);
 
       ul.appendChild(li);
     });
-    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
-    teamDiv.appendChild(ul); teamDiv.appendChild(addBtn);
+
+    const addBtn=document.createElement("button");
+    addBtn.textContent="➕ Add Employee";
+    addBtn.onclick=()=>addEmployee(team.name);
+
+    teamDiv.appendChild(ul);
+    teamDiv.appendChild(addBtn);
     menu.appendChild(teamDiv);
 
-    // Allow dropping at end of list
     ul.addEventListener("dragover", e=>e.preventDefault());
     ul.addEventListener("drop", e=>{
       e.preventDefault();
@@ -170,36 +217,6 @@ function addEmployee(teamName){
   const employee={id:Date.now(),name,site,team:teamName};
   const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
   saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
-}
-
-// ==========================
-// Swap / Move Employees
-// ==========================
-function swapEmployees(id1, id2){
-  let emp1, emp2;
-  teams.forEach(team=>{
-    team.employees.forEach(emp=>{
-      if(emp.id==id1) emp1=emp;
-      if(emp.id==id2) emp2=emp;
-    });
-  });
-  if(emp1 && emp2){
-    const t1=emp1.team; emp1.team=emp2.team; emp2.team=t1;
-    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
-  }
-}
-function moveEmployeeToTeam(empId, newTeamName){
-  let emp;
-  teams.forEach(team=>{
-    team.employees.forEach(e=>{ if(e.id==empId) emp=e; });
-  });
-  if(emp && emp.team!==newTeamName){
-    const oldTeam=teams.find(t=>t.name===emp.team);
-    oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
-    const newTeam=teams.find(t=>t.name===newTeamName);
-    emp.team=newTeamName; newTeam.employees.push(emp);
-    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
-  }
 }
 
 // ==========================
@@ -224,9 +241,7 @@ function addRow(emp){
   const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site; row.insertCell(2).appendChild(siteInput);
 
   const team=teams.find(t=>t.name===emp.team);
-
   const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team?.siteIn||""; row.insertCell(3).appendChild(inInput);
-
   const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team?.siteOut||""; row.insertCell(4).appendChild(outInput);
 
   const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
@@ -316,7 +331,7 @@ async function pushSummaryToGoogleSheet(){
     }
   });
   const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
-  const webAppURL="https://script.google.com/macros/s/AKfycbz3cCt4x9T1ugWtaUZBcm3toy7sUCdndJCcqeCH5lPgVZvLp9dVNVvVmNGTmdqbmw7USg/exec"; // Replace with your Web App URL
+  const webAppURL="https://script.google.com/macros/s/AKfycbz3cCt4x9T1ugWtaUZBcm3toy7sUCdndJCcqeCH5lPgVZvLp9dVNVvVmNGTmdqbmw7USg/exec"; 
   try{
     const res=await fetch(webAppURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
     const result=await res.json();
@@ -341,6 +356,25 @@ function updateShareLink(){
 // ==========================
 document.getElementById("saveBtn").addEventListener("click", ()=>{
   saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!");
+});
+
+// ==========================
+// Filtering
+// ==========================
+const searchBox = document.createElement("input");
+searchBox.type = "text";
+searchBox.placeholder = "🔍 Filter employees...";
+searchBox.style.marginLeft = "10px";
+document.querySelector("header div").prepend(searchBox);
+
+searchBox.addEventListener("input", ()=>{
+  const filter = searchBox.value.toLowerCase();
+  const rows = document.querySelectorAll("#employeeTable tr");
+  rows.forEach((row, index)=>{
+    if(index===0) return; 
+    const name = row.cells[0].textContent.toLowerCase();
+    row.style.display = name.includes(filter) ? "" : "none";
+  });
 });
 
 // ==========================
